# daily-cli

./: .gitignore  GITHUB_ACTIONS_PUBLISH.md  MANIFEST.in  PUBLISHING.md  README.md  RELEASE_NOTES.md  prepare_first_release.sh  pyproject.toml
.github/workflows/: flujodetrabajo.yml
daily/: cli.py  core.py  markdown.py
tests/: test_cli.py  test_core.py  test_markdown.py  test_search.py
