[project]
name = "daily-cli-tool"
version = "1.1.0"
description = "Minimalist CLI for engineers to log daily work"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Victor", email = "victorcg98@gmail.com"}
]
maintainers = [
    {name = "Victor", email = "victorcg98@gmail.com"}
]
keywords = ["cli", "daily", "standup", "productivity", "engineering", "markdown", "notes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Office/Business",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "iterfzf>=1.4.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/creusvictor/daily-cli"
Documentation = "https://github.com/creusvictor/daily-cli#readme"
Repository = "https://github.com/creusvictor/daily-cli"
Issues = "https://github.com/creusvictor/daily-cli/issues"
Changelog = "https://github.com/creusvictor/daily-cli/releases"

[project.scripts]
daily = "daily.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daily"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
